infra/traefik/gateway.yml
kind:       Gateway
apiVersion: gateway.networking.k8s.io/v1

metadata:
  name:      traefik-gateway
  namespace: traefik

spec:
  gatewayClassName: traefik
  
  listeners:
    - name:     web    # entry point name
      port:     80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    
    - name:     websecure
      port:     443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name:      secret-selfsigned-tls
            namespace: traefik
            group:     ""
            kind:      Secret
      allowedRoutes:
        namespaces:
          from: All
